Picture sizing on home page fixed. Only 1 tile displayed on mobile.

--- a/app/components/ProjectsTiles/ProjectsTiles.scss
+++ b/app/components/ProjectsTiles/ProjectsTiles.scss
@@ -1,3 +1,8 @@
-.ProjectsTitles {
-
+.ProjectsTiles {
+  &-Tile {
+    cursor: pointer;
+    &-Img {
+      width: 80%;
+    }
+  }
 }
