--- a/app/containers/Project/Project.scss
+++ b/app/containers/Project/Project.scss
@@ -65,7 +65,7 @@
     flex-direction: column;
     justify-content: center;
     &-Icon {
-      width: 125px;
+      width: 100px;
     }
     &-Name {
       display: flex;
